--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@material/button": "^0.42.0",
     "sass.js": "^0.10.13"
   },
   "main": "index.js",
